templates/network/network.json
{
    "AWSTemplateFormatVersion":"2010-09-09",
    "Parameters":{
        "VpcCidrPrefix":{
            "Type":"String",
            "Default":"10.11"
        },
        "RegionPrefix":{
            "Type":"String",
            "Default":"mum"
        }
    },
    "Resources":{
        "RegionVPC":{
            "Type":"AWS::EC2::VPC",
            "Properties":{
                "CidrBlock": {
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref":"VpcCidrPrefix"
                            },
                            ".0.0/16"
                        ]
                    ]
                },
                "EnableDnsSupport":true,
                "EnableDnsHostnames":true,
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref":"RegionPrefix"
                                    },
                                    "-vpc"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "RegionPublicSubnet1":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"RegionVPC"
                },
                "CidrBlock":{
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref":"VpcCidrPrefix"
                            },
                            ".1.0/24"
                        ]
                    ]
                },
                "AvailabilityZone":{
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": {"Ref":"AWS::Region"}
                        }
                    ]
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref":"RegionPrefix"
                                    },
                                    "-public-subnet-1"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "RegionPublicSubnet2":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"RegionVPC"
                },
                "CidrBlock":{
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref":"VpcCidrPrefix"
                            },
                            ".2.0/24"
                        ]
                    ]
                },
                "AvailabilityZone":{
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": {"Ref":"AWS::Region"}
                        }
                    ]
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref":"RegionPrefix"
                                    },
                                    "-public-subnet-2"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "RegionPublicSubnet3":{
            "Type":"AWS::EC2::Subnet",
            "Properties":{
                "VpcId":{
                    "Ref":"RegionVPC"
                },
                "CidrBlock":{
                    "Fn::Join": [
                        "",
                        [
                            {
                                "Ref":"VpcCidrPrefix"
                            },
                            ".3.0/24"
                        ]
                    ]
                },
                "AvailabilityZone":{
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": {"Ref":"AWS::Region"}
                        }
                    ]
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref":"RegionPrefix"
                                    },
                                    "-public-subnet-3"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "RegionInternetGateway":{
            "Type":"AWS::EC2::InternetGateway",
            "Properties":{
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref":"RegionPrefix"
                                    },
                                    "-internet-gateway"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "RegionGatewayAttachment":{
            "Type":"AWS::EC2::VPCGatewayAttachment",
            "Properties":{
                "VpcId":{
                    "Ref":"RegionVPC"
                },
                "InternetGatewayId":{
                    "Ref":"RegionInternetGateway"
                }
            }
        },
        "RegionPublicSubnet1RouteTable":{
            "Type":"AWS::EC2::RouteTable",
            "Properties":{
                "VpcId":{
                    "Ref":"RegionVPC"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join": [
                                "",
                                [
                                    {
                                        "Ref":"RegionPrefix"
                                    },
                                    "-public-subnet-1-route-table"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "RegionPublicSubnet1RouteTableAssociation":{   
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "Properties":{
                "SubnetId":{
                    "Ref":"RegionPublicSubnet1"
                },
                "RouteTableId":{
                    "Ref":"RegionPublicSubnetRouteTable"
                }
            }
        },
        "RegionPublicSubnet2RouteTableAssociation":{   
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "Properties":{
                "SubnetId":{
                    "Ref":"RegionPublicSubnet2"
                },
                "RouteTableId":{
                    "Ref":"RegionPublicSubnetRouteTable"
                }
            }
        },
        "RegionPublicSubnet3RouteTableAssociation":{   
            "Type":"AWS::EC2::SubnetRouteTableAssociation",
            "Properties":{
                "SubnetId":{
                    "Ref":"RegionPublicSubnet3"
                },
                "RouteTableId":{
                    "Ref":"RegionPublicSubnetRouteTable"
                }
            }
        },
        "RegionPublicSubnet1RouteTableInternetGatewayRoute": {
            "Type":"AWS::EC2::Route",
            "Properties":{
                "RouteTableId":{
                    "Ref":"RegionPublicSubnetRouteTable"
                },
                "DestinationCidrBlock":"0.0.0.0/0", 
                "GatewayId":{
                    "Ref":"RegionInternetGateway"
                }
            }
        },
        "RegionPublicSubnet2RouteTableInternetGatewayRoute": {
            "Type":"AWS::EC2::Route",
            "Properties":{
                "RouteTableId":{
                    "Ref":"RegionPublicSubnetRouteTable"
                },
                "DestinationCidrBlock":"0.0.0.0/0", 
                "GatewayId":{
                    "Ref":"RegionInternetGateway"
                }
            }
        },
        "RegionPublicSubnet3RouteTableInternetGatewayRoute": {
            "Type":"AWS::EC2::Route",
            "Properties":{
                "RouteTableId":{
                    "Ref":"RegionPublicSubnetRouteTable"
                },
                "DestinationCidrBlock":"0.0.0.0/0", 
                "GatewayId":{
                    "Ref":"RegionInternetGateway"
                }
            }
        }
    },
    "Outputs":{
        "RegionVPCId":{
            "Export":{
                "Name":{
                    "Fn::Join": ["", [{"Ref":"RegionPrefix"}, "-vpc-id"]]
                }
            },
            "Value":{
                "Ref":"RegionVPC"
            }
        },
        "RegionPublicSubnet1Id":{
            "Export":{
                "Name":{
                    "Fn::Join": ["", [{"Ref":"RegionPrefix"}, "-public-subnet-1-id"]]
                }
            },
            "Value":{
                "Ref":"RegionPublicSubnet1"
            }
        },
        "RegionPublicSubnet2Id":{    
            "Export":{
                "Name":{
                    "Fn::Join": ["", [{"Ref":"RegionPrefix"}, "-public-subnet-2-id"]]
                }
            },
            "Value":{
                "Ref":"RegionPublicSubnet2"
            }
        },
        "RegionPublicSubnet3Id":{
            "Export":{
                "Name":{
                    "Fn::Join": ["", [{"Ref":"RegionPrefix"}, "-public-subnet-3-id"]]
                }
            },
            "Value":{
                "Ref":"RegionPublicSubnet3"
            }
        }
    }
}
